# physical-ai-humanoid-robotics-with-rag-chatbot

./: .gitignore  HACKATHON_SUMMARY.md  IMPLEMENTATION_GUIDE.md  QUICKSTART.md  README.md  docusaurus.config.ts  package-lock.json  package.json  pyproject.toml  sidebars.ts  start-chatbot.bat  start-chatbot.sh
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
backend/: README.md  ingest.py  main.py  rag_engine.py  requirements.txt  test_api.py
docs/: constitution.mdx  hardware-setup.md  intro.mdx
docs/module1-ros2/: _category_.json  ros2-fundamentals.md
docs/module2-digital-twin/: _category_.json  simulation-basics.md
docs/module3-nvidia-isaac/: _category_.json  isaac-perception.md
docs/module4-vla-capstone/: vla-integration.md
resources/code/module2-digital-twin/my_gazebo_pkg/: package.xml  setup.py
resources/code/module2-unity/module1-ros2/my_ros2_pkg/: package.xml  setup.py
resources/code/module2-unity/module1-ros2/my_ros2_pkg/launch/: my_ros2_pkg_launch.py
resources/code/module2-unity/module1-ros2/my_ros2_pkg/my_ros2_pkg/: __init__.py  publisher_node.py  subscriber_node.py
resources/code/module2-unity/module1-ros2/my_ros2_pkg/urdf/: basic_humanoid.urdf
resources/simulations/: humanoid_world.world  spawn_humanoid_world.launch.py
specs/001-physical-ai-textbook/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-physical-ai-system-spec/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-switch-rag-chatbot-embeddings-to-cohere/: spec.md
src/css/: custom.css
(+88 files in other folders)
