<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_gazebo_pkg</name>
  <version>0.0.0</version>
  <description>ROS 2 Python package for Gazebo integration, including simulated sensors</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_ros</depend> <!-- Add Gazebo ROS dependency -->

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/share/${name}/models"/>
  </export>
</package>